# rust-nbody

./: .gitignore  LICENSE  README.md
.github/workflows/: pull_request_checks.yml
nbody/: Cargo.toml
nbody/benches/: calc_grav_force_two_bodies_benchmark.rs
nbody/examples/: earth_moon.json
nbody/python/: pyproject.toml
nbody/python/nbody/: plot.py
nbody/src/: gravity.rs  integrator.rs  lib.rs  main.rs
