[tool.poetry]
name = "nbody"
version = "0.1.0"
description = ""
authors = ["Matthew Vernacchia <mvernacc@mit.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"

[tool.poetry.scripts]
nbody-plot = "nbody.plot:plot_nbody_result"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
